--- a/quienesomos.html
+++ b/quienesomos.html
@@ -5,49 +5,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes somos</title>
-    <link rel="stylesheet" href="./estilos/fontello.css">
     <link rel="stylesheet" href="./estilos/estilos.css">
+    <link rel="stylesheet" href="./estilos/fontello.css">
+    <!-- -------------------------- INICIO BOOTSTRAP --------------------------- -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- ---------------------------- FIN BOOTSTRAP ---------------------------- -->
+    <title>Quienes somos</title>
 </head>
 
 <body>
-    <div class="section-quienesomos">
-        <div class="contenido-quienesomos">
-            <header>
-                <div class="rectangulo">
-                    <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
-                </div>
-                <div class="header-quienesomos">
-                    <nav class="navbar">
-                        <ul>
-                            <li><a href="#">Dolce Vita</a></li>
-                            <li><a href="#">Vestidos</a></li>
-                            <li><a href="#">Mis favoritos</a></li>
-                            <li><a href="#">contacto</a></li>
-                        </ul>
-                    </nav>
-            </header>
-            <div class="img">
-                <img src="./assets/image 90.png" alt="Imagen quienesomos" class="img-quienesomos">
-            </div>
-            <div class="textos-quienesomos">
-                <h1 class="tittle-quienesomos">Quienes somos</h1>
-                <p class="parrafo-quienesomos">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
-                    calidad y el detalle</p>
-                <p class="parrafo-quienesomos">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
-                    apliques, raso de novias, encaje de novias, entre otras.</p>
-                    <div class="btn-div">
-                        <button class="btn-reserva">
-                            <a href="#">Nuestros productos</a>
-                        </button>
-                    </div>
-            </div>
-            <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
-                class="btn-wsp" target="_blank">
-                <i class="icon-whatsapp"></i>
-            </a>
-        </div>
+    <div class="rectangulo">
+        <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
     </div>
+    <header class="header-index">
+        <nav class="navbar navbar-expand-lg navbar-light bg-gatips navbar-text">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <h1 class="text-header">Dolce vita</h1>
+                </a>
+                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="#" style="color: #f4c1c0;">Vestidos</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="#"  style="color: #f4c1c0;">Quienes somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" style="color: #f4c1c0;">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="img">
+<img src="./assets/image 90.png" alt="" class="img-header">
+    </div>
+    <div class="textos-quienesomoscel">
+        <h1 class="tittle-quienesomoscel">Quienes somos</h1>
+        <p class="parrafo-quienesomoscel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
+            calidad y el detalle</p>
+        <p class="parrafo-quienesomoscel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
+            apliques, raso de novias, encaje de novias, entre otras.</p>
+            <div class="btn-divcel">
+                <button class="btn-reservacel">
+                    <a href="#">Nuestros productos</a>
+                </button>
+            </div>
+    </div>
+    <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
+        class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+    </a>
+
+
+    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
+    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
 
 </body>
 
