--- a/materiales.html
+++ b/materiales.html
@@ -28,7 +28,7 @@
                     </nav>
             </header>
             <div class="img">
-                <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-materiales">
+                <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
             </div>
             <div class="textos-materiales">
                 <h1 class="tittle-materiales">Nuestros Materiales</h1>
@@ -50,6 +50,23 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+        <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
+    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
 </body>
 
 </html>
