--- a/materialescel.html
+++ b/materialescel.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos/estilos.css">
+    <title>Materiales</title>
     <link rel="stylesheet" href="./estilos/fontello.css">
+    <link rel="stylesheet" href="./estilos/estilos.css">
     <!-- -------------------------- INICIO BOOTSTRAP --------------------------- -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- ---------------------------- FIN BOOTSTRAP ---------------------------- -->
-    <title>Quienes somos</title>
+
 </head>
 
 <body>
@@ -24,8 +25,9 @@
                 <a class="navbar-brand" href="index.html">
                     <h1 class="text-header">Dolce vita</h1>
                 </a>
-                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -45,24 +47,40 @@
         </nav>
     </header>
     <div class="img">
-<img src="./assets/image 90.png" alt="" class="img-header">
+        <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
     </div>
-    <div class="textos-quienesomoscel">
-        <h1 class="tittle-quienesomoscel">Quienes somos</h1>
-        <p class="parrafo-quienesomoscel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
+    <div class="textos-materialescel">
+        <h1 class="tittle-materialescel">Nuestros Materiales</h1>
+        <p class="parrafo-materialescel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
             calidad y el detalle</p>
-        <p class="parrafo-quienesomoscel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
+        <p class="parrafo-materialescel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
             apliques, raso de novias, encaje de novias, entre otras.</p>
-            <div class="btn-divcel">
-                <button class="btn-reservacel">
-                    <a href="#">Nuestros productos</a>
-                </button>
-            </div>
+        <div class="btn-divcel">
+            <button class="btn-reservacel">
+                <a href="#">Nuestros productos</a>
+            </button>
+        </div>
     </div>
     <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
         class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
@@ -71,7 +89,6 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
     <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
-
 </body>
 
 </html>
