--- a/materiales.html
+++ b/materiales.html
@@ -5,50 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes somos</title>
+    <title>Materiales</title>
     <link rel="stylesheet" href="./estilos/fontello.css">
     <link rel="stylesheet" href="./estilos/estilos.css">
+    <!-- -------------------------- INICIO BOOTSTRAP --------------------------- -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- ---------------------------- FIN BOOTSTRAP ---------------------------- -->
+
 </head>
 
 <body>
-    <div class="section-materiales">
-        <div class="contenido-materiales">
-            <header>
-                <div class="rectangulo">
-                    <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
+    <div class="rectangulo">
+        <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
+    </div>
+    <header class="header-index">
+        <nav class="navbar navbar-expand-lg navbar-light bg-gatips navbar-text">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <h1 class="text-header">Dolce vita</h1>
+                </a>
+                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="#">Vestidos</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="#">Quienes somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="header-materiales">
-                    <nav class="navbar">
-                        <ul>
-                            <li><a href="#">Dolce Vita</a></li>
-                            <li><a href="#">Vestidos</a></li>
-                            <li><a href="#">Mis favoritos</a></li>
-                            <li><a href="#">contacto</a></li>
-                        </ul>
-                    </nav>
-            </header>
-            <div class="img">
-                <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
             </div>
-            <div class="textos-materiales">
-                <h1 class="tittle-materiales">Nuestros Materiales</h1>
-                <p class="parrafo-materiales">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
-                    calidad y el detalle</p>
-                <p class="parrafo-materiales">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
-                    apliques, raso de novias, encaje de novias, entre otras.</p>        
-                    <div class="btn-div">
-                        <button class="btn-reserva">
-                            <a href="#">Nuestros productos</a>
-                        </button>
-                    </div>
-            
-            </div>
-            <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
-                class="btn-wsp" target="_blank">
-                <i class="icon-whatsapp"></i>
-            </a>
+        </nav>
+    </header>
+    <div class="img">
+        <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
+    </div>
+    <div class="textos-materialescel">
+        <h1 class="tittle-materialescel">Nuestros Materiales</h1>
+        <p class="parrafo-materialescel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
+            calidad y el detalle</p>
+        <p class="parrafo-materialescel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
+            apliques, raso de novias, encaje de novias, entre otras.</p>
+        <div class="btn-divcel">
+            <button class="btn-reservacel">
+                <a href="#">Nuestros productos</a>
+            </button>
         </div>
     </div>
+    <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
+        class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+    </a>
 
 
 
@@ -61,7 +77,13 @@
 
 
 
-        <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
+
+
+
+
+
+
+    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
