--- a/quienesomos.html
+++ b/quienesomos.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- --------------------------------- CSS --------------------------------- -->
     <link rel="stylesheet" href="./estilos/estilos.css">
+    <!-- --------------------------------- CSS --------------------------------- -->
+    <!-- ------------------------------ FONTELLO ------------------------------- -->
     <link rel="stylesheet" href="./estilos/fontello.css">
+    <!-- ------------------------------ FONTELLO ------------------------------- -->
     <!-- -------------------------- INICIO BOOTSTRAP --------------------------- -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -15,56 +19,83 @@
 </head>
 
 <body>
+    <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
     <div class="rectangulo">
+        <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
+        <!-- ----------------------------- LOGO DOLCE ------------------------------ -->
         <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
+        <!-- ----------------------------- LOGO DOLCE ------------------------------ -->
     </div>
     <header class="header-index">
+        <!-- ------------------------------- NAVBAR -------------------------------- -->
         <nav class="navbar navbar-expand-lg navbar-light bg-gatips navbar-text">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
+                    <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
                     <h1 class="text-header">Dolce vita</h1>
+                    <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
                 </a>
-                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ">
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
                             <a class="nav-link" href="#">Vestidos</a>
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item ">
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
                             <a class="nav-link" href="#">Quienes somos</a>
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item">
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
                             <a class="nav-link" href="#">Contacto</a>
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <!-- ------------------------------- NAVBAR -------------------------------- -->
     </header>
     <div class="img">
-<img src="./assets/image 90.png" alt="" class="img-header">
+        <!-- ------------------------------ IMG BODY ------------------------------- -->
+        <img src="./assets/image 90.png" alt="" class="img-header">
+        <!-- ------------------------------ IMG BODY ------------------------------- -->
     </div>
     <div class="textos-quienesomoscel">
+        <!-- ------------------------------- TITULO -------------------------------- -->
         <h1 class="tittle-quienesomoscel">Quienes somos</h1>
+        <!-- ------------------------------- TITULO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
         <p class="parrafo-quienesomoscel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
             calidad y el detalle</p>
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- -------------------------------- TEXTO -------------------------------- -->
         <p class="parrafo-quienesomoscel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
             apliques, raso de novias, encaje de novias, entre otras.</p>
-            <div class="btn-divcel">
-                <button class="btn-reservacel">
-                    <a href="#">Nuestros productos</a>
-                </button>
-            </div>
+        <!-- -------------------------------- TEXTO -------------------------------- -->
+        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
+        <div class="btn-divcel">
+            <button class="btn-reservacel">
+                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+                <a href="#">Nuestros productos</a>
+                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            </button>
+        </div>
+        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
+    <!-- ------------------------------ ICON-WSP ------------------------------- -->
     <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
         class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
-
-
+    <!-- ------------------------------ ICON-WSP ------------------------------- -->
     <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
