Enlazado page bienvenida y quienes somos, eliminacion de paginas que no uso :D

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -13,10 +13,10 @@
 <body>
     <div class="fondo-bienvenida"></div>
     <div class="frase-bienvenida">
-        <h1 class="animate__animated animate__fadeInDownBig animate__slow">Dolce Vita</h1>
+        <h1 class="animate__animated animate__fadeInDownBig animate__slow">
+            <a href="quienesomos.html">Dolce vita</a>
+        </h1>
     </div>
-
-
     <!-- ---------------------------- Js ---------------------------- -->
     <script src="./js/wow.min.js"></script>
     <!-- ---------------------------- Js ---------------------------- -->
