--- a/index.html
+++ b/index.html
@@ -5,67 +5,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dolce Vita</title>
-    <link rel="shotcut icon" href="" type="iamge/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>Inicio | Dolce vita</title>
+    <!-- ------------------------------ FONTELLO ------------------------------- -->
+    <link rel="stylesheet" href="./estilos/fontello.css">
+    <!-- ------------------------------ FONTELLO ------------------------------- -->
+    <!-- --------------------------------- CSS --------------------------------- -->
     <link rel="stylesheet" href="./estilos/estilos.css">
+    <!-- --------------------------------- CSS --------------------------------- -->
+    <!-- -------------------------- INICIO BOOTSTRAP --------------------------- -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- ---------------------------- FIN BOOTSTRAP ---------------------------- -->
+
 </head>
 
 <body>
+    <!-- ----------------------------- BIENVENIDA ------------------------------ -->
 
-
-
-
-
-    <nav>
-        <a href="./paginas/dolcevita.html">Dolce Vita</a>
-        <a href="./paginas/dolcevita2.html">Dolce Vita2</a>
-        <a href="./paginas/misfavoritos.html">Mis favoritos</a>
-        <a href="./paginas/contacto.html">Contacto</a>
-        <a href="./paginas/contacto2.html">Contacto2</a>
-        <a href="./paginas/misfavoritos1.html">Mis favoritos1</a>
-        <a href="./paginas/misfavoritos2.html">Mis favoritos2</a>
-    </nav>
-
-
-
-
-
-    <footer>
-        <div class="container_grid">
-            <div class="estilos_footer1">
-
-            </div>
-            <div class="estilos_footer2">
-                <p class="color">¡Nuestas redes!</p>
-                <hr class="hr-footer">
-                <div class="estilos_footer-botton">
-                    <button class="button-footer">
-                        <a href="https://www.instagram.com/dolce_vitaprincesas/" target="_blank"><img
-                                class="imagen_footer" src="./assets/logo.ig.png" alt="Imagen Logo Instagram"
-                                width="30"></a>
-                    </button>
-                    <button class="button-footer">
-                        <a href="https://wa.me/5492964523259?text=¡Me%20interesan%20sus%20productos!"
-                            target="_blank"><img class="imagen_footer" src="./assets/logo.wpp.png"
-                                alt="Imagen Logo Whatsapp" width="30"></a>
-                    </button>
-                    <button class="button-footer">
-                        <a href="https://www.facebook.com/dolcevitaprincesas/" target="_blank"><img
-                                class="imagen_footer" src="./assets/logo.facebook.png" alt="Imagen Logo Facebook"
-                                width="30"></a>
-                    </button>
-                    <p class="text color">Copyright 2022 Dolce | Vita </p>
+    <!-- --------------------------- FIN BIENVENIDA ---------------------------- -->
+    <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
+    <div class="rectangulo">
+        <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
+        <!-- ----------------------------- LOGO DOLCE ------------------------------ -->
+        <img class="logo" src="./assets/logo.jpg" alt="logo"></a>
+        <!-- ----------------------------- LOGO DOLCE ------------------------------ -->
+    </div>
+    <header class="header-index">
+        <!-- ------------------------------- NAVBAR -------------------------------- -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-gatips navbar-text">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
+                    <h1 class="text-header">Dolce vita</h1>
+                    <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
+                </a>
+                <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
+                            <a class="nav-link" href="#">Vestidos</a>
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
+                        </li>
+                        <li class="nav-item ">
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
+                            <a class="nav-link" href="#">Quienes somos</a>
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
+                        </li>
+                        <li class="nav-item">
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
+                            <a class="nav-link" href="#">Contacto</a>
+                            <!-- ------------------------------- ENLACES -------------------------------- -->
+                        </li>
+                    </ul>
                 </div>
             </div>
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous">
-            </script>
-            <script src="https://kit.fontawesome.com/4946a7d77f.js" crossorigin="anonymous"></script>
+        </nav>
+        <!-- ------------------------------- NAVBAR -------------------------------- -->
+    </header>
+    <div class="img">
+        <!-- ------------------------------- IMG BODY ------------------------------- -->
+        <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
+        <!-- ------------------------------- IMG BODY ------------------------------- -->
+    </div>
+    <div class="textos-materialescel">
+        <!-- ------------------------------- TITULO -------------------------------- -->
+        <h1 class="tittle-materialescel">Nuestros Materiales</h1>
+                <!-- ------------------------------- TITULO -------------------------------- -->
+                <!-- -------------------------------- TEXTO -------------------------------- -->
+        <p class="parrafo-materialescel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
+            calidad y el detalle</p>
+            <!-- -------------------------------- TEXTO -------------------------------- -->
+            <!-- -------------------------------- TEXTO -------------------------------- -->
+        <p class="parrafo-materialescel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
+            apliques, raso de novias, encaje de novias, entre otras.</p>
+            <!-- -------------------------------- TEXTO -------------------------------- -->
+            <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
+        <div class="btn-divcel">
+            <button class="btn-reservacel">
+                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+                <a href="#">Nuestros productos</a>
+                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            </button>
+        </div>
+        <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
+    </div>
+    <!-- ------------------------------ ICON-WSP ------------------------------- -->
+    <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
+        class="btn-wsp" target="_blank">
+        <i class="icon-whatsapp"></i>
+    </a>
+    <!-- ------------------------------ ICON WSP ------------------------------- -->
+    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
+    <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
 </body>
 
 </html>
