--- a/materiales.html
+++ b/materiales.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="#">Vestidos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
-                        <li class="nav-item ">\
+                        <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                             <a class="nav-link" href="#">Quienes somos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
