Creacion pagina Dolce vita + medias

--- a/dolcevita.html
+++ b/dolcevita.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio | Dolce vita</title>
+    <title>Dolce vita</title>
     <!-- ------------------------------ FONTELLO ------------------------------- -->
     <link rel="stylesheet" href="./estilos/fontello.css">
     <!-- ------------------------------ FONTELLO ------------------------------- -->
@@ -20,9 +20,6 @@
 </head>
 
 <body>
-    <!-- ----------------------------- BIENVENIDA ------------------------------ -->
-
-    <!-- --------------------------- FIN BIENVENIDA ---------------------------- -->
     <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
     <div class="rectangulo">
         <!-- -------------------------- RECTANGULO HEADER -------------------------- -->
@@ -53,12 +50,12 @@
                         </li>
                         <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Quienes somos</a>
+                            <a class="nav-link" href="quienesomos.html">Quienes somos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="materiales.html">Materiales</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                     </ul>
@@ -69,20 +66,18 @@
     </header>
     <div class="img">
         <!-- ------------------------------- IMG BODY ------------------------------- -->
-        <img src="./assets/image3.jpg" alt="Imagen materiales" class="img-header">
+        <img src="./assets/Maskgroup1.jpg" alt="Imagen materiales" class="img-header">
         <!-- ------------------------------- IMG BODY ------------------------------- -->
     </div>
-    <div class="textos-materialescel">
+    <div class="textos-dolcecel">
         <!-- ------------------------------- TITULO -------------------------------- -->
-        <h1 class="tittle-materialescel">Nuestros Materiales</h1>
+        <h1 class="tittle-dolcecel">Dolce vita</h1>
                 <!-- ------------------------------- TITULO -------------------------------- -->
                 <!-- -------------------------------- TEXTO -------------------------------- -->
-        <p class="parrafo-materialescel">Realizamos una eleccion exhaustiva de nuestras telas, priorizando la
-            calidad y el detalle</p>
+        <p class="parrafo-dolcecel">Es una pasión que nace a fines de 2019, inspirada en la pureza, magia e inocenciad de la niñez. Esta marca está destinada a vestir pequeñas princesas, desde su nacimiento hasta su adolescencia.</p>
             <!-- -------------------------------- TEXTO -------------------------------- -->
             <!-- -------------------------------- TEXTO -------------------------------- -->
-        <p class="parrafo-materialescel">Uso de telas de fiesta, saten, taftan, tules bordados con flores, perlas,
-            apliques, raso de novias, encaje de novias, entre otras.</p>
+        <p class="parrafo-dolcecel">La colección presenta confecciones de piezas exclusivas y diseños innovadores de Alta Costura, incorporando moda y tendencia actual, con la impronta de su diseñadora que lo hace original y diferente.</p>
             <!-- -------------------------------- TEXTO -------------------------------- -->
             <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
         <div class="btn-divcel">
@@ -107,5 +102,8 @@
     </script>
     <!-- ------------------------------ BOOTSTRAP ------------------------------ -->
 </body>
+
+
+
 
 </html>
