--- a/materiales.html
+++ b/materiales.html
@@ -50,12 +50,12 @@
                         </li>
                         <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Quienes somos</a>
+                            <a class="nav-link" href="quienesomos.html">Quienes somos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="materiales.html">Materiales</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                     </ul>
