--- a/vestidos1.html
+++ b/vestidos1.html
@@ -44,7 +44,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Vestidos</a>
+                            <a class="nav-link" href="vestidos1.html">Vestidos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item ">
