Todo ok, faltan los href

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -14,7 +14,7 @@
     <div class="fondo-bienvenida"></div>
     <div class="frase-bienvenida">
         <h1 class="animate__animated animate__fadeInDownBig animate__slow">
-            <a href="quienesomos.html">Dolce vita</a>
+            <a href="dolcevita.html">Dolce vita</a>
         </h1>
     </div>
     <!-- ---------------------------- Js ---------------------------- -->
