--- a/quienesomos.html
+++ b/quienesomos.html
@@ -32,7 +32,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
-                    <h1 class="text-header">Dolce vita</h1>
+                    <h1 class="text-header">
+                        <a href="dolcevita.html">Dolce vita</a>
+                    </h1>
                     <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
                 </a>
                 <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
@@ -44,7 +46,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Vestidos</a>
+                            <a class="nav-link" href="vestidos.html">Vestidos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item ">
@@ -65,9 +67,9 @@
     </header>
     <div class="img">
         <!-- ------------------------------ IMG BODY ------------------------------- -->
-        <img src="./assets/image 90.png" alt="" class="img-header">
+        <img src="./assets/image-quienesomos.png" alt="" class="img-header">
         <!-- ------------------------------ IMG BODY ------------------------------- -->
-    </div>
+    </div>  
     <div class="textos-quienesomoscel">
         <!-- ------------------------------- TITULO -------------------------------- -->
         <h1 class="tittle-quienesomoscel">Quienes somos</h1>
@@ -84,7 +86,7 @@
         <div class="btn-divcel">
             <button class="btn-reservacel">
                 <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-                <a href="#">Nuestros productos</a>
+                <a href="vestidos.html">Nuestros productos</a>
                 <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
             </button>
         </div>
