--- a/vestidos.html
+++ b/vestidos.html
@@ -32,7 +32,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
-                    <h1 class="text-header">Dolce vita</h1>
+                    <h1 class="text-header">
+                        <a href="dolcevita.html">Dolce vita</a>
+                    </h1>
                     <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
                 </a>
                 <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
@@ -44,7 +46,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Vestidos</a>
+                            <a class="nav-link" href="vestidos.html">Vestidos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item ">
@@ -64,159 +66,134 @@
         <!-- ------------------------------- NAVBAR -------------------------------- -->
     </header>
 
-    <div class="cards">
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/princesaGlamour.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Princesa Glamour <br>
-                    <small>Vestido de tul</small>
-                </h3>
+
+    <main class="container-xl">
+        <div class="row row-cols-1 row-cols-md-3 g-5">
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/princesaGlamour.png" class="card-img-top1" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>PRINCESA GLAMOUR</b></h5>
+                        <p class="card-text">Vestido realizado en tul bordado color natural.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/olivia.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>OLIVIA</b></h5>
+                        <p class="card-text">Pechera realizada en tul bordado, forrado en satén blanco.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/happybirth.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>TUTU HAPPY BIRTHDAY</b></h5>
+                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/giuliana.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>GIULIANA</b></h5>
+                        <p class="card-text">Vestido realizado en tul bordado color natural.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/isabella.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>ISABELLA</b></h5>
+                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/luz.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>LUZ</b></h5>
+                        <p class="card-text">Pechera lisa, mangas tul bordado con terminación, falda en raso.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/maria.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>MARIA</b></h5>
+                        <p class="card-text">Pechera realizada en tul bordado, forrado en saten blanco.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/martina.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>MARTINA</b></h5>
+                        <p class="card-text">Color manteca, realizado en su totalida con micro tul, forrado con saten.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/perla.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>PERLA</b></h5>
+                        <p class="card-text">Pechera realizada en tul con perlas</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../assets/zara.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>ZARA</b></h5>
+                        <p class="card-text">Pechera en tul bordado, forrado en su interior, sin mangas.</p>
+                    </div>
+                </div>
+                <div class="input-Box5">
+                    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Consultar Stock" class="btn-stock"></a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/olivia.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Olivia <br>
-                    <small>Pechera de tul</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/happybirth.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Tutu happy birthdy<br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/giuliana.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Giuliana <br>
-                    <small>Vestido de tul</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/isabella.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Isabella <br>
-                    <small>Pechera de tul, forrado en saten.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/luz.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Luz <br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/maria.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Maria <br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/martina.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Martina <br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/mia.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Mia <br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/perla.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Perla <br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="imgBox">
-            <img src="./assets/zara.png" alt="">
-        </div>
-        <div class="details">
-            <div class="title">
-                <h3>Zara <br>
-                    <small>Pechera lisa, mangas tul bordado.</small>
-                </h3>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-
-</div>
-
-
-
-
+    </main>
     <!-- ------------------------------ ICON-WSP ------------------------------- -->
-    <a href="https://api.whatsapp.com/send?phone=5491167647633&text=Hola,%20quiero%20hacer%20una%20consulta"
+    <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!"
         class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
