--- a/materiales.html
+++ b/materiales.html
@@ -33,7 +33,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
-                    <h1 class="text-header">Dolce vita</h1>
+                    <h1 class="text-header">
+                        <a href="dolcevita.html">Dolce vita</a>
+                    </h1>
                     <!-- ------------------------------ H1 NAVBAR ------------------------------ -->
                 </a>
                 <button class="navbar-toggler boton-nav" type="button" data-bs-toggle="collapse"
@@ -45,7 +47,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item ">
                             <!-- ------------------------------- ENLACES -------------------------------- -->
-                            <a class="nav-link" href="#">Vestidos</a>
+                            <a class="nav-link" href="vestidos.html">Vestidos</a>
                             <!-- ------------------------------- ENLACES -------------------------------- -->
                         </li>
                         <li class="nav-item ">
