Arreglo de los botones

--- a/materiales.html
+++ b/materiales.html
@@ -85,11 +85,9 @@
             <!-- -------------------------------- TEXTO -------------------------------- -->
             <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
         <div class="btn-divcel">
-            <button class="btn-reservacel">
                 <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-                <a href="#">Nuestros productos</a>
+                <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input type="submit" value="Nuestros productos" class="btn-reservacel"></a>
                 <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-            </button>
         </div>
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
