--- a/quienesomos.html
+++ b/quienesomos.html
@@ -69,7 +69,7 @@
         <!-- ------------------------------ IMG BODY ------------------------------- -->
         <img src="./assets/image-quienesomos.png" alt="" class="img-header">
         <!-- ------------------------------ IMG BODY ------------------------------- -->
-    </div>  
+    </div>
     <div class="textos-quienesomoscel">
         <!-- ------------------------------- TITULO -------------------------------- -->
         <h1 class="tittle-quienesomoscel">Quienes somos</h1>
@@ -84,11 +84,10 @@
         <!-- -------------------------------- TEXTO -------------------------------- -->
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
         <div class="btn-divcel">
-            <button class="btn-reservacel">
-                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-                <a href="vestidos.html">Nuestros productos</a>
-                <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
-            </button>
+            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
+            <a href="https://wa.me/5492964523259?text=¡Me%20interesa%20el%20vestido!" target="_blank"><input
+                    type="submit" value="Nuestros productos" class="btn-reservacel"></a>
+            <!-- -------------------------- ENLACE PRODUCTOS --------------------------- -->
         </div>
         <!-- --------------------------- BOTON PRODUCTOS --------------------------- -->
     </div>
